adding more regression tests, bug fixing, etc